Bruker List.of(...) i stedet for Arrays.asList(...).